k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-api
  labels:
    name: kubernetes-api
    app: kubernetes-api
    environment: production
