k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes-api
  template:
    metadata:
      labels:
        app: kubernetes-api
    spec:
      containers:
      - name: kubernetes-api
        image: byrongomezjr/kubernetes-api:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubernetes-api
