k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-api
  namespace: kubernetes-api
  labels:
    app: kubernetes-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: kubernetes-api
